[project]
name = "wsp-balsa"
dynamic = ["version"]
authors = [
    { name = "Brian Cheung", email = "brian.cheung@wsp.com" }
]
description = "Python tools for travel demand forecasting applications and analyses"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
dependencies = [
    'pandas>=0.24',
    'numpy>=1.21',
    'numexpr>=2.6'
]
requires-python = ">=3.7,<3.13"

[project.optional-dependencies]
plotting = ["matplotlib>=3.0"]
matrices = [
    "numba>=0.35",
    "openmatrix",
]

[project.urls]
Homepage = "https://github.com/wsp-sag/balsa"
Issues = "https://github.com/wsp-sag/balsa/issues"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.2.2.post1,<2",
    "twine>=6.0.1,<7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/wsp_balsa/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
pandas = ">=2.2.3,<3"
numpy = ">=2.0.2,<3"
numexpr = ">=2.10.2,<3"

[tool.pixi.pypi-dependencies]
wsp_balsa = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
sphinx = ">=8.1.3,<9"
sphinx-favicon = ">=1.0.1,<2"
pydata-sphinx-theme = ">=0.16.1,<0.17"
pytest = ">=8.3.4,<9"

[tool.pixi.feature.plotting.dependencies]
matplotlib = ">=3.10.0,<4"

[tool.pixi.feature.matrices.dependencies]
numba = ">=0.60.0,<0.61"
openmatrix = ">=0.3.5.0,<0.4"

[tool.pixi.tasks]

[tool.pixi.environments]
default = ["plotting", "matrices"]
dev = ["dev", "plotting", "matrices"]
